--- a/NeuralNetwork/ImageSeparator/ImageSeparator.csproj
+++ b/NeuralNetwork/ImageSeparator/ImageSeparator.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CharacterDetector.cs" />
+    <Compile Include="NeuralRecogniser.cs" />
     <Compile Include="PrimitiveMethod.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
