--- a/NeuralNetwork/LetterRecogniser/LetterRecogniser.csproj
+++ b/NeuralNetwork/LetterRecogniser/LetterRecogniser.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -103,6 +104,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ImageSeparator\ImageSeparator.csproj">
+      <Project>{6c68c9b3-2e78-4990-b1d0-56ccfa3a9d04}</Project>
+      <Name>ImageSeparator</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NeuralNetworkLib\NeuralNetworkLib.csproj">
       <Project>{ab4717bf-a9be-419c-9c33-ccc85c6df719}</Project>
       <Name>NeuralNetworkLib</Name>
